--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <script src="jquery.js" charset="utf-8"></script>
   </head>
   <body>
-
+    <div class="movSprite"></div>
   </body>
   <script src="app.js"></script>
 </html>
