added check collision object and constructor

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="movSprite"></div>
+    <div class="colider"></div>
   </body>
   <script src="app.js"></script>
 </html>
