added left edge hit detection

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
   <body>
     <div class="movSprite"></div>
     <div class="colider"></div>
+    <div class="boxS"></div>
   </body>
   <script src="app.js"></script>
 </html>
