added dynamic board creation and grid lookup system

--- a/game.html
+++ b/game.html
@@ -9,6 +9,8 @@
   <body>
     <div class="gameBoard">
     </div>
+    <div class="testDiv"></div>
   </body>
+  <script src="jquery.js" charset="utf-8"></script>
   <script src="app.js"></script>
 </html>
