--- a/game.html
+++ b/game.html
@@ -5,9 +5,20 @@
     <title>Game</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <script src="jquery.js" charset="utf-8"></script>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <body>
     <div class="gameBoard">
+      <div class="scoreDisplay">
+        <div class="livesDisplay">
+          <div class="lives life1"></div>
+          <div class="lives life2"></div>
+          <div class="lives life3"></div>
+        </div>
+        <div class="scoreText">
+          <div class="scoreNum">Score: </div>
+        </div>
+        </div>
     </div>
   </body>
   <script src="jquery.js" charset="utf-8"></script>
