--- a/game.html
+++ b/game.html
@@ -8,6 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <body>
+    <div class="conditionAlert">
+      <div class="conditionBar">
+        <div class="gameConditionText">You Win!</div>
+      </div>
+    </div>
     <div class="gameBoard">
       <div class="scoreDisplay">
         <div class="livesDisplay">
