Add condition popup background

--- a/game.html
+++ b/game.html
@@ -8,9 +8,15 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <body>
-    <div class="conditionAlert">
-      <div class="conditionBar">
-        <div class="gameConditionText">You Win!</div>
+    <div class="conditionBackground">
+      <div class="conditionAlert">
+        <div class="conditionBar">
+          <div class="gameConditionText">You Win!</div>
+        </div>
+        <div class="conditionBody"></div>
+        <div class="resetButton">
+          <div class="resetButtonTxt">Play Again?</div>
+        </div>
       </div>
     </div>
     <div class="gameBoard">
