Add reset game function

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <body>
-    <div class="conditionBackground">
+    <div class="conditionContainer">
       <div class="conditionAlert">
         <div class="conditionBar">
           <div class="gameConditionText">You Win!</div>
