--- a/game.html
+++ b/game.html
@@ -13,7 +13,10 @@
         <div class="conditionBar">
           <div class="gameConditionText">You Win!</div>
         </div>
-        <div class="conditionBody"></div>
+        <div class="conditionBody">
+          <div class="playerName">Player 1</div>
+          <div class="playerScore">Score: </div>
+        </div>
         <div class="resetButton">
           <div class="resetButtonTxt">Play Again?</div>
         </div>
