added landing page and form submission

--- a/game.html
+++ b/game.html
@@ -29,6 +29,9 @@
           <div class="lives life2"></div>
           <div class="lives life3"></div>
         </div>
+        <div class="nameDisplay">
+          <div class="displayPlayerName"></div>
+        </div>
         <div class="scoreText">
           <div class="scoreNum">Score: </div>
         </div>
